--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,11 +5,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .main {
   padding: 5rem 0;
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -111,6 +112,13 @@
 .logo {
   height: 1em;
   margin-left: 0.5rem;
+}
+
+.scrollToTop {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  margin-right:25px;
 }
 
 @media (max-width: 600px) {
